objects/Resourc__c.object
<CustomObject>
    <label>Resource Bank</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CTC__c</fullName>
        <label>CTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_O_B__c</fullName>
        <label>D.O.B.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_MAIL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>E-MAIL</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Mobile_2__c</fullName>
        <label>Mobile 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Mode__c</fullName>
        <label>Work Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WFH</fullName>
                </value>
                <value>
                    <fullName>OFFICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experiance__c</fullName>
        <label>Experiance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_ID__c</fullName>
        <displayFormat>Resource-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <label>Expected CTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <label>Notice Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <label>Other Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Known__c</fullName>
        <label>Language Known</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>HINDI</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>On Contract</fullName>
                </value>
                <value>
                    <fullName>Freelance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remark_Language__c</fullName>
        <label>Remark (Language)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whatsapp_Mobile__c</fullName>
        <label>Whatsapp Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ready_To_Relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Relocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Skills__c</fullName>
        <label>Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Proficient</fullName>
                </value>
                <value>
                    <fullName>Not Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Working_In__c</fullName>
        <label>Currently Working In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Joining_Date__c</fullName>
        <label>Expected Joining Date</label>
        <type>Date</type>
    </fields>
</CustomObject>